Closed Bug 107346 Opened 24 years ago Closed 24 years ago

InstallGlobalLocale doesn't need nsIChromeRegistry all the time

Categories

(SeaMonkey :: UI Design, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.6

People

(Reporter: dougt, Assigned: dougt)

Details

(Keywords: perf)

Attachments

(1 file)

InstallGlobalService current calls getService on the nsIChromeRegistry before it check to see if this service is required. Simple patch coming up.
Summary: InstallGlobalLocale doesn;t need nsIChromeRegistry all the time → InstallGlobalLocale doesn't need nsIChromeRegistry all the time
Keywords: perf
Comment on attachment 55533 [details] [diff] [review] conditional get service v.1 r=dp
Attachment #55533 - Flags: review+
QA Contact: sairuh → gbush
Target Milestone: --- → mozilla0.9.6
Comment on attachment 55533 [details] [diff] [review] conditional get service v.1 sr=waterson
Attachment #55533 - Flags: superreview+
Fix checked in: Checking in nsAppRunner.cpp; /cvsroot/mozilla/xpfe/bootstrap/nsAppRunner.cpp,v <-- nsAppRunner.cpp new revision: 1.321; previous revision: 1.320 done
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified code fix
Status: RESOLVED → VERIFIED
Product: Core → Mozilla Application Suite
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: