conditionally create nsIChromeRegistry. b=107346. r=dp@netscape.com, sr=waterson@netscape.com